@@ -6,14 +6,15 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.event.TransactionPhase;
 import org.springframework.transaction.event.TransactionalEventListener;
-import whoreads.backend.domain.member.entity.Member;
 import whoreads.backend.domain.member.repository.MemberRepository;
 import whoreads.backend.domain.notification.dto.FcmMessageDTO;
+import whoreads.backend.domain.notification.dto.MemberTokenDTO;
 import whoreads.backend.domain.notification.enums.NotificationType;
 import whoreads.backend.domain.notification.service.NotificationPushService;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -30,19 +31,26 @@ public class NotificationEventListener {
             findById 사용시 N+1 문제 발생 -> 추후 유명인 팔로우 도메인 완성시 수정 예정!
          */
         List<Long> followList = List.of(2L,3L);
-        List<String> tokens = followList.stream()
+        
+        // todo: 멤버 아이디가 들어있는 리스트로 가져오기 , 이것도 추후 구현
+        List<MemberTokenDTO> memberTokens = followList.stream()
                 .map(memberRepository::findById)
                 .flatMap(Optional::stream)
-                .map(Member::getFcmToken)
-                .filter(token -> token != null && !token.isBlank())
-                .toList();
-
-        pushService.sendMulticast(tokens,message);
+                .filter(member -> member.getFcmToken() != null && !member.getFcmToken().isBlank())
+                .map(member -> new MemberTokenDTO() {  // 익명 객체로 인터페이스 구현
+                    @Override
+                    public Long getMemberId() { return member.getId(); }
+                    @Override
+                    public String getFcmToken() { return member.getFcmToken(); }
+                })
+                .collect(Collectors.toList());
+        // 알림 기록할 수 있게 넣어주기
+        pushService.sendMulticast(memberTokens,message);
     }
     @Async("WhoReadsAsyncExecutor")
     @EventListener
     public void handleRoutineEvent(NotificationEvent.RoutineEvent event) {
         FcmMessageDTO message = FcmMessageDTO.of(NotificationType.ROUTINE,event);
-        pushService.sendMulticast(event.tokens(),message);
+        pushService.sendMulticast(event.memberTokens(),message);
     }
 }
